syntax = "proto3";

option csharp_namespace = "ProjectPB.Protos";

package ProjectPB;

service ProjectPBService{
rpc GetAllProjects (StatusRepley) returns (ProjectList);

}

message ProjectObject{
	int32 projectNumber = 1;
	string ProjectName = 2;
	string description = 3;
}

message StatusRepley{
	string status = 1;
	int32 command = 2;
}
/*------End of respons Objects------*/

/*------Start of message lists------*/

message ProjectList {
  repeated ProjectObject ProjectList = 1;
}
//protoc --plugin=protoc-gen-ts="C:\Users\ama.HARTVIG\source\repos\AooHartvigIT\HcInfoBoard\node_modules\.bin\protoc-gen-ts.cmd" --js_out="import_style=commonjs,binary:src\app\generated" --ts_out="service=grpc-web:src/app/generated" src\Protos\CustomerProto.proto
